@@ -45,15 +45,16 @@ import org.apache.commons.lang.StringUtils;
 //Third-party libraries
 import org.jdesktop.swingx.JXTaskPane;
 
+
 //Application-internal dependencies
 import omero.RDouble;
 import omero.model.PlaneInfo;
+
 import org.openmicroscopy.shoola.agents.imviewer.util.ImagePaintingFactory;
 import org.openmicroscopy.shoola.agents.util.browser.TreeImageDisplay;
 import org.openmicroscopy.shoola.env.data.OmeroImageService;
 import org.openmicroscopy.shoola.util.filter.file.CppFilter;
 import org.openmicroscopy.shoola.util.filter.file.CustomizedFileFilter;
-import org.openmicroscopy.shoola.util.filter.file.EditorFileFilter;
 import org.openmicroscopy.shoola.util.filter.file.JavaFilter;
 import org.openmicroscopy.shoola.util.filter.file.MatlabFilter;
 import org.openmicroscopy.shoola.util.filter.file.PythonFilter;
@@ -61,6 +62,8 @@ import org.openmicroscopy.shoola.util.ui.OMEComboBox;
 import org.openmicroscopy.shoola.util.ui.OMEComboBoxUI;
 import org.openmicroscopy.shoola.util.ui.UIUtilities;
 import org.openmicroscopy.shoola.util.ui.UnitsObject;
+
+import com.google.common.math.DoubleMath;
 
 import pojos.AnnotationData;
 import pojos.ChannelAcquisitionData;
@@ -544,9 +547,9 @@ public class EditorUtil
         PIXELS_TYPE_DESCRIPTION.put(OmeroImageService.UINT_32,
                 "Unsigned 32-bit (4 byte)");
         PIXELS_TYPE_DESCRIPTION.put(OmeroImageService.FLOAT,
-                "Floating precision");
+                "Float");
         PIXELS_TYPE_DESCRIPTION.put(OmeroImageService.DOUBLE,
-                "Double precision");
+                "Double");
         PIXELS_TYPE = new LinkedHashMap<String, String>();
         Entry<String, String> entry;
         Iterator<Entry<String, String>>
@@ -569,9 +572,6 @@ public class EditorUtil
         COLORS_BAR.put(Color.BLUE, "Blue");
         COLORS_BAR.put(Color.WHITE, "White");
     }
-
-    /** The filter to determine if a file is an editor file or not. */
-    private static final EditorFileFilter editorFilter = new EditorFileFilter();
 
     /**
      * Transforms the size and returns the value and units.
@@ -1190,8 +1190,8 @@ public class EditorUtil
         details = new LinkedHashMap<String, Object>(10);
         List<String> notSet = new ArrayList<String>();
         details.put(NAME, "");
-        details.put(EXCITATION, Float.valueOf(0));
-        details.put(EMISSION, Float.valueOf(0));
+        details.put(EXCITATION, Integer.valueOf(0));
+        details.put(EMISSION, Integer.valueOf(0));
         details.put(ND_FILTER, Float.valueOf(0));
         details.put(PIN_HOLE_SIZE, Float.valueOf(0));
         details.put(FLUOR, "");
@@ -1224,9 +1224,14 @@ public class EditorUtil
         } else {
             if (wave <= 100) {
                 notSet.add(EMISSION);
-                details.put(EMISSION, new Float(0));
+                details.put(EMISSION, Integer.valueOf(0));
             } else {
-                details.put(EMISSION, new Float(wave));
+                //First check if the wave is a int
+                if (DoubleMath.isMathematicalInteger(wave)) {
+                    details.put(EMISSION, new Integer(wave.intValue()));
+                } else {
+                    details.put(EMISSION, wave);
+                }
             }
         }
 
@@ -1236,9 +1241,14 @@ public class EditorUtil
         } else {
             if (wave <= 100) {
                 notSet.add(EXCITATION);
-                details.put(EXCITATION, new Float(0));
+                details.put(EXCITATION, Integer.valueOf(0));
             } else {
-                details.put(EXCITATION, new Float(wave));
+              //First check if the wave is a int
+                if (DoubleMath.isMathematicalInteger(wave)) {
+                    details.put(EXCITATION, new Integer(wave.intValue()));
+                } else {
+                    details.put(EXCITATION, wave);
+                }
             }
         }
 
@@ -2229,18 +2239,6 @@ public class EditorUtil
     public static JXTaskPane createTaskPane(String title)
     {
         return UIUtilities.createTaskPane(title, UIUtilities.BACKGROUND_COLOR);
-    }
-
-    /**
-     * Returns <code>true</code> if the passed name is the name of an
-     * editor file, <code>false</code> otherwise.
-     *
-     * @param fileName The name of the file.
-     * @return See above.
-     */
-    public static boolean isEditorFile(String fileName)
-    {
-        return editorFilter.accept(fileName);
     }
 
     /**
